<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/myTeamMemberScrollView">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/scratch_end_gradient">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/select_indi"
            android:orientation="vertical"
            android:weightSum="1">

            <include
                android:id="@+id/team_selection"
                layout="@layout/team_selection_app_bar" />

            <TextView
                android:id="@+id/tv_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:inputType="none"
                android:text="@string/select_team_members"
                android:textColor="@android:color/background_light"
                android:textColorLink="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Maximum Lines -->


            <LinearLayout
                android:id="@+id/teamMemberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:weightSum="4">

            </LinearLayout>


            <EditText
                android:id="@+id/et_team_member_name"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="@drawable/question_background"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:hint="@string/PlayerName"
                android:inputType="textCapSentences|textPersonName"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_team_member_student_number"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/question_background"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:hint="@string/studentNumber"
                android:inputType="textCapSentences"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_team_member_email"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/question_background"
                android:ems="10"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="bold"
                android:visibility="gone" />


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_team_member"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/mybutton"
                    android:fontFamily="@font/regular"
                    android:text="@string/add_team_member"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_start_quiz"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="210dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/mybutton"
                    android:fontFamily="@font/regular"
                    android:text="@string/start_quiz"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </FrameLayout>


        </LinearLayout>

    </FrameLayout>

</ScrollView>





