<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.feedbackForm.FeedbackView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/quiz_type_indi_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/feedback"
                layout="@layout/feedback_app_bar" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mikado_ultra"
                android:paddingStart="3dp"
                android:paddingTop="20dp"
                android:text="@string/contact_form_name"
                android:textAllCaps="true"
                android:textColor="@color/scratch_start_gradient"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/regular"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mikado_ultra"
                android:paddingStart="3dp"
                android:text="@string/contact_form_email"
                android:textAllCaps="true"
                android:textColor="@color/scratch_start_gradient"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/regular"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mikado_ultra"
                android:paddingStart="3dp"
                android:text="@string/contact_form_subject"
                android:textAllCaps="true"
                android:textColor="@color/scratch_start_gradient"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/regular"
                android:inputType="text|textCapSentences"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:fontFamily="@font/mikado_ultra"
                android:paddingStart="3dp"
                android:text="@string/contact_form_message"
                android:textAllCaps="true"
                android:textColor="@color/scratch_start_gradient"
                android:textColorLink="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:height="180dp"
                android:fontFamily="@font/regular"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/post_message"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/mikado_ultra"
                android:paddingLeft="15dp"
                android:paddingTop="1dp"
                android:paddingRight="15dp"
                android:paddingBottom="1dp"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>