<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scrolling_image_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actionBar"
    android:fillViewport="true">


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/scratch_end_gradient">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/main_background"
            android:orientation="vertical">

            <include
                android:id="@+id/quiz_format"
                layout="@layout/user_type_app_bar" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="40dp"
                    android:ems="10"
                    android:fontFamily="@font/mikado_ultra"
                    android:gravity="center"
                    android:maxLength="280"
                    android:maxLines="8"
                    android:text="@string/startScreen"
                    android:textColor="@android:color/background_light"
                    android:textSize="50sp"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="169dp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_student"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:drawableEnd="@drawable/scratch_icon"
                    android:drawablePadding="-70dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/take_a_quiz"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_lecturer"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:drawableEnd="@drawable/create_questions_icon"
                    android:drawablePadding="-50dp"
                    android:elevation="24dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/create_a_quiz"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </FrameLayout>


        </LinearLayout>

    </FrameLayout>

</ScrollView>








